# dsa

./: CMakeLists.txt
Linked_List/: CMakeLists.txt  Core Cmake  lib cmake
Linked_List/basic_operations/src/: CMakeLists.txt  delete.c  display.c  insert.c
Linked_List/core/src/: CMakeLists.txt  create.c  main.c
Linked_List/includes/: list.h
